# gameboy_emulator

./: .gitignore  CMakeLists.txt  Cargo.toml  conanfile.txt  main.cpp  readme.md
.github/workflows/: build_and_test_multi_os.yml  cmake.yml  coverage.yml
doc/setups/: fedora.md
emulator/: Cargo.toml
emulator/src/: cartridge.rs  debugger.rs  emulator.rs  interrupts.rs  joypad.rs  lib.rs  logging.rs  main.rs  serial.rs  sound.rs  state.rs  statistics.rs  throttler.rs  timer.rs
emulator/src/gui/: eframe.rs  mod.rs  sdl2.rs
emulator/src/memory/: argument.rs  cgb.rs  gbmemory.rs  init.rs  memory.rs  mod.rs  ram.rs  registers.rs
emulator/src/memory/mbc/: common.rs  interface.rs  mbc1.rs  mbc3.rs  mbc5.rs  mod.rs  no_controller.rs
emulator/src/video/: controller.rs  memory.rs  mod.rs  renderer.rs  sprite.rs  sprites.rs  tile.rs
emulator/tests/: mooneye_test.rs
generator/: Cargo.toml
generator/data/: instructions.json
generator/src/: generator.rs  instruction.rs  interface.rs  main.rs  parser.rs
generator/src/common/: base.rs  flags.rs  function.rs  getset.rs  mod.rs  operation.rs  register.rs
generator/src/implementations/: mod.rs  rust.rs
generators/: readme.md
generators/instructions/: gbinstruction.py  generate_instructions.py  get_instruction_csv.py  instructions.csv  readme.md
generators/memory_map/: generate_memory_map.py
generators/memory_map/maps/: registers.csv
generators/opcodes/: gb_opcode.py  generate_opcode_operations.py  get_opcode_csv.py  opcodes.csv
generators/utils/: constants.py  formatters.py
include/emulator/: cartridge.h  cpu.h  exceptions.h  logging.h  memory_controller.h  memory_map.h  registers.h  romram_controller.h  types.h
include/emulator/cpu/: interrupt.h
include/emulator/io/: joypad.h  serial.h
include/emulator/memory/: mbc.h  memory.h  memory_controller.h  memory_map.h  ram.h  registers.h  romram_controller.h
include/emulator/sound/: controller.h
include/emulator/time/: timer.h
include/emulator/utils/: map.h  ranges.h  to_string.h
include/emulator/video/: controller.h  memory.h  renderer.h
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: integration_test.rs
macros_derive/: Cargo.toml
macros_derive/src/: lib.rs
scripts/: conan_install_in_cmake_builds.sh
src/: cartridge.cpp  logging.cpp  memory_controller.cpp  memory_map.cpp  registers.cpp  romram_controller.cpp
src/cpu/: interrupt.cpp
src/io/: joypad.cpp  serial.cpp
src/memory/: mbc.cpp  memory.cpp  memory_controller.cpp  memory_map.cpp  ram.cpp  registers.cpp  romram_controller.cpp
src/sound/: controller.cpp
src/time/: timer.cpp
src/utils/: to_string.cpp
src/video/: controller.cpp  renderer.cpp
tests/: test_cpu.cpp
tests/instructions/: constants.h  test_adc.cpp  test_add.cpp  test_and.cpp  test_bit_operations.cpp  test_call.cpp  test_cp.cpp  test_cpu_control.cpp  test_daa.cpp  test_dec.cpp  test_general_purpose_arithmetic.cpp  test_inc.cpp  test_jump.cpp  test_ld.cpp  test_or.cpp  test_pop.cpp  test_push.cpp  test_ret.cpp  test_rotate.cpp  test_rst.cpp  test_sbc.cpp  test_shift.cpp  test_sub.cpp  test_swap.cpp  test_xor.cpp
tests/instructions/fixtures/: instruction.cpp  instruction.h
tests/mocks/: memory_controller.h  romram_controller.h
tests/mocks/memory/: memory.h
tests/mocks/video/: renderer.h
tests/video/: test_controller.cpp
