[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.3", features = ["derive"] }
eframe = "0.23.0"
log = { version = "0.4.20", features = ["std"] }
macros = { path = "../macros" }
sdl2 = { version = "0.35.2", optional = true }
env_logger = "0.9.1"
rfd = "0.12.1"

[features]
sdl2-ui = ["sdl2"]
