[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
log = { version = "0.4.20", features = ["std"] }
macros = { path = "../macros" }
sdl2 = { version = "0.37.0", optional = true }
env_logger = "0.11.6"
rfd = "0.15.1"
spin_sleep = "1.2.0"

[features]
sdl2-ui = ["sdl2"]
