[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
quote = "1.0.26"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
syn = "2.0.15"
macros_derive = { path = "../macros_derive"}
